--- a/package.json
+++ b/package.json
@@ -9,19 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "react-icons": "^5.5.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@clerk/nextjs": "^6.32.0",
+    "@eslint/eslintrc": "^3",
+    "@react-three/fiber": "^9.3.0",
+    "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "@eslint/eslintrc": "^3"
+    "framer-motion": "^12.23.12",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
+    "three": "^0.180.0",
+    "typescript": "^5"
   }
 }
